<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <!-- Dashboard -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.suanmesgulum.app.presentation.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboard_to_modes"
            app:destination="@id/modesFragment" />

        <action
            android:id="@+id/action_dashboard_to_logs"
            app:destination="@id/logsFragment" />

        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/settingsFragment" />

    </fragment>

    <!-- Modları Yönet -->
    <fragment
        android:id="@+id/modesFragment"
        android:name="com.suanmesgulum.app.presentation.modes.ModesFragment"
        android:label="@string/nav_modes"
        tools:layout="@layout/fragment_modes" />

    <!-- Geçmiş Loglar -->
    <fragment
        android:id="@+id/logsFragment"
        android:name="com.suanmesgulum.app.presentation.logs.LogsFragment"
        android:label="@string/nav_logs"
        tools:layout="@layout/fragment_logs" />

    <!-- Ayarlar -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.suanmesgulum.app.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
